update tqyp -- acum nu mai da eroare dar nu sunt validari

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,157 +1,158 @@
 {
-    "password": "Password",
-    "username": "Institution code",
-    "login": "Login",
-    "login_message": "Hello! Please log in",
-    "empty_username_password": "Please fill in all fields",
-    "User error. Please login again.": "User error. Please login again.",
-    "logout": "Exit",
-    "back": "Back",
-    "menuScreen": "Please choose an option",
-    "dashboard": "Dashboard",
-    "dataEntry": "Data Entry",
-    "importData": "Import Data",
-    "exportData": "Export Data",
-    "Institution details saved.": "Institution details saved.",
-    "User updated.": "User updated.",
-    "Please fill all fields": "Please fill all fields",
-    "User deleted.": "User deleted.",
-    "Are you sure you want to delete this user?": "Are you sure you want to delete this user?",
-    "ATU code must be 12 characters long": "ATU code must be 12 characters long",
-    "Please enter a valid email address": "Please enter a valid email address",
-    "Instrument error.": "Instrument error.",
-    "User added.": "User added.",
-    "t_service_level_view_data_collectors": "Service level view / Data collectors",
-    "t_service_level_questionnaires": "Service level questionnaires",
-    "t_status": "Status",
-    "t_actions": "Actions",
-    "t_individual_level_questionnaires": "Individual level questionnaires",
-    "t_total_to_be_filled": "Total to be filled",
-    "t_completion_rate": "Completion rate",
-    "t_completed": "Completed",
-    "t_in_progress": "In progress",
-    "t_not_started": "Not started",
-    "t_view_edit": "View / Edit",
-    "t_institution_details": "Institution details",
-    "t_view": "View",
-    "t_regionalCoordinator_level_view_regionalCoordinators": "Regional coordinator level view / regional coordinators",
-    "t_details": "Details",
-    "t_export": "Export",
-    "t_export_data": "Export Data",
-    "t_filter": "Filter",
-    "t_filter_by": "Filter by",
-    "t_external_evaluators": "External evaluators",
-    "t_import": "Import",
-    "t_reports": "Reports",
-    "t_institution_name": "Institution name",
-    "t_institution_code": "Institution code",
-    "t_institution_address": "Institution address",
-    "t_institution_atu_code": "Institution code of the administrative-territorial unit",
-    "t_institution_region": "Region",
-    "t_institution_district": "District",
-    "t_institution_type": "Type of institution",
-    "t_institution_type_group_1": "Childcare institutions:",
-    "t_institution_type_group_2": "Boarding schools:",
-    "t_institution_type_option_1": "11. Children's home (Baby home)",
-    "t_institution_type_option_1_value": "11",
-    "t_institution_type_option_2": "12. Mehribonlik house",
-    "t_institution_type_option_2_value": "12",
-    "t_institution_type_option_3": "13. Muruvat house for children with disabilities",
-    "t_institution_type_option_3_value": "13",
-    "t_institution_type_option_4": "21. Type I- II for deaf or with hearing impairments children",
-    "t_institution_type_option_4_value": "21",
-    "t_institution_type_option_5": "22. Type III- IV for blind or visually impaired children",
-    "t_institution_type_option_5_value": "22",
-    "t_institution_type_option_6": "23. Type V for children with severe speech impairments",
-    "t_institution_type_option_6_value": "23",
-    "t_institution_type_option_7": "24. Type VI for children with musculoskeletal disorders",
-    "t_institution_type_option_7_value": "24",
-    "t_institution_type_option_8": "25. Type VII for children with children with slow mental development / mental disorders",
-    "t_institution_type_option_8_value": "25",
-    "t_institution_type_option_9": "26. Type VIII for children with intellectual disabilities",
-    "t_institution_type_option_9_value": "26",
-    "t_no_children": "Number of children placed in the service",
-    "t_no_staff": "Number of staff working in the service",
-    "t_no_patronat": "Number of",
-    "t_no_young_left": "Number of young people who left the care system",
-    "t_button_save": "Save",
-    "t_users": "Users",
-    "t_name": "Name",
-    "t_email": "E-mail",
-    "t_role": "Role",
-    "t_country": "Country",
-    "t_city": "City",
-    "t_add": "Add",
-    "t_first_name": "First name",
-    "t_last_name": "Last name",
-    "t_patronymics": "Patronymics",
-    "t_username": "Username",
-    "t_password": "Password",
-    "t_add_user": "Add user",
-    "t_position": "Position",
-    "t_profession": "Profession",
-    "t_phone": "Phone",
-    "t_edit_user": "Edit user",
-    "t_cpis_list": "CPIS list",
-    "t_add_child": "Add child",
-    "t_csr_list": "Staff Registry List",
-    "t_add_staff": "Add staff",
-    "t_pin": "PIN",
-    "Instrument saved.": "Instrument saved.",
-    "Completati corect toate campurile!": "All entries should be correctly filled in!",
-    "The following fields are mandatory: PIN, LK1a, LK1b, LK1c!": "The following fields are mandatory: PIN, LK1a, LK1b, LK1c!",
-    "t_choose": "--- choose ---",
-    "t_choose_value": "-9",
-    "The following fields are mandatory: E1, EUID!": "The following fields are mandatory: E1, EUID!",
-    "t_euid": "EUID",
-    "t_id": "ID",
-    "Are you sure you want to delete this item?": "Are you sure you want to delete this item?",
-    "Item deleted.": "Item deleted.",
-    "t_ftch_list": "Family-Type Children's Home List",
-    "t_add_family_home": "Add Family Home",
-    "Value_up_to_ten": "The value must be up to 10",
-    "Start_before_end": "Admission date before exit date",
-    "t_notatall": "1. Not at all",
-    "t_notatall_value": "1",
-    "t_total": "10. Total",
-    "t_total_value": "10",
-    "The following fields are mandatory: IFM1, IFM2, IFM3!": "The following fields are mandatory: IFM1, IFM2, IFM3!",
-    "At_least_one_disability": "At least one disability",
-    "At_least_one_brother_or_sister": "At least one brother or sister",
-    "t_pfq_list": "Patronat Family Questionnaire List",
-    "t_add_patronat_family": "Add Patronat Family",
-    "The following fields are mandatory: IG1, IG2, IG3!": "The following fields are mandatory: IG1, IG2, IG3!",
-    "t_eef_list": "External evaluation form of the childcare institutions and boarding schools",
-    "t_add_evaluation": "Add evaluation",
-    "t_institution": "Institution",
-    "t_add_young_people": "Add young person",
-    "t_yplcs_list": "Questionnaire about the young person leaving the child care system",
-    "The following fields are mandatory: PI1, PI1A, PI1B, PI1C!": "The following fields are mandatory: PI1, PI1A, PI1B, PI1C!",
-    "t_cibs_list": "Questionnaire about the child placed in specialized boarding schools",
-    "not_in_registry": "The institution does not appear in the Registry",
-    "t_tqyp_list": "Trace questionnaire about the young person who left the alternative care system",
-    "t_patronat_family_questionnaires": "Patronat Family Questionnaire",
-    "t_instrument8": "I8. Patronat Family Questionnaire",
-    "t_children_placed_in_the_service": "Questionnaire about the child placed into the child protection system",
-    "t_instrument1": "I1. Questionnaire about the child placed into the child protection system",
-    "t_family_type_children_s_home_questionnaire": "Family-Type Children's Home Questionnaire",
-    "t_instrument7": "I7. Family-Type Children's Home Questionnaire",
-    "t_questionnaire_on_the_material_resources": "Material resources of the institution and the living conditions of the residing children",
-    "t_instrument4": "I4. Material resources of the institution and the living conditions of the residing children",
-    "t_staff_working_in_the_service": "Staff registry of the childcare institutions and specialized boarding-schools",
-    "t_instrument3": "I3. Staff registry of the childcare institutions and specialized boarding-schools",
-    "t_data_sheet_on_entries_and_exits": "Synthetic Data Collection Sheet Regarding Entries and Exits from the Childcare Institution and Specialized Boarding Schools",
-    "t_instrument6": "I6. Synthetic Data Collection Sheet Regarding Entries and Exits from the Childcare Institution and Specialized Boarding Schools",
-    "t_young_people_who_left_care_system": "Questionnaire about the young person leaving the child care system",
-    "t_instrument5": "I5. Questionnaire about the young person leaving the child care system",
-    "t_child_placed_in_specialized_boarding_schools": "Questionnaire about the child placed in specialized boarding schools",
-    "t_instrument2": "I2. Questionnaire about the child placed in specialized boarding schools",
-    "t_trace_questionnaire_about_the_young_person_who_left_the_alternative_care_system": "Trace questionnaire about the young person who left the alternative care system",
-    "t_instrument5A": "I5A. Trace questionnaire about the young person who left the alternative care system",
-    "t_external_evaluation_forms": "External evaluation form of the childcare institutions and boarding schools",
-    "t_instrument9": "I9. External evaluation form of the childcare institutions and boarding schools",
-    "t_instruments": "Instruments list",
-    "t_button_complete": "Completed",
-    "t_number_to_be_filled": "Number to be filled",
-    "t_number_completed": "Number completed"
+	"password": "Password",
+	"username": "Institution code",
+	"login": "Login",
+	"login_message": "Hello! Please log in",
+	"empty_username_password": "Please fill in all fields",
+	"User error. Please login again.": "User error. Please login again.",
+	"logout": "Exit",
+	"back": "Back",
+	"menuScreen": "Please choose an option",
+	"dashboard": "Dashboard",
+	"dataEntry": "Data Entry",
+	"importData": "Import Data",
+	"exportData": "Export Data",
+	"Institution details saved.": "Institution details saved.",
+	"User updated.": "User updated.",
+	"Please fill all fields": "Please fill all fields",
+	"User deleted.": "User deleted.",
+	"Are you sure you want to delete this user?": "Are you sure you want to delete this user?",
+	"ATU code must be 12 characters long": "ATU code must be 12 characters long",
+	"Please enter a valid email address": "Please enter a valid email address",
+	"Instrument error.": "Instrument error.",
+	"User added.": "User added.",
+	"t_service_level_view_data_collectors": "Service level view / Data collectors",
+	"t_service_level_questionnaires": "Service level questionnaires",
+	"t_status": "Status",
+	"t_actions": "Actions",
+	"t_individual_level_questionnaires": "Individual level questionnaires",
+	"t_total_to_be_filled": "Total to be filled",
+	"t_completion_rate": "Completion rate",
+	"t_completed": "Completed",
+	"t_in_progress": "In progress",
+	"t_not_started": "Not started",
+	"t_view_edit": "View / Edit",
+	"t_institution_details": "Institution details",
+	"t_view": "View",
+	"t_regionalCoordinator_level_view_regionalCoordinators": "Regional coordinator level view / regional coordinators",
+	"t_details": "Details",
+	"t_export": "Export",
+	"t_export_data": "Export Data",
+	"t_filter": "Filter",
+	"t_filter_by": "Filter by",
+	"t_external_evaluators": "External evaluators",
+	"t_import": "Import",
+	"t_reports": "Reports",
+	"t_institution_name": "Institution name",
+	"t_institution_code": "Institution code",
+	"t_institution_address": "Institution address",
+	"t_institution_atu_code": "Institution code of the administrative-territorial unit",
+	"t_institution_region": "Region",
+	"t_institution_district": "District",
+	"t_institution_type": "Type of institution",
+	"t_institution_type_group_1": "Childcare institutions:",
+	"t_institution_type_group_2": "Boarding schools:",
+	"t_institution_type_option_1": "11. Children's home (Baby home)",
+	"t_institution_type_option_1_value": "11",
+	"t_institution_type_option_2": "12. Mehribonlik house",
+	"t_institution_type_option_2_value": "12",
+	"t_institution_type_option_3": "13. Muruvat house for children with disabilities",
+	"t_institution_type_option_3_value": "13",
+	"t_institution_type_option_4": "21. Type I- II for deaf or with hearing impairments children",
+	"t_institution_type_option_4_value": "21",
+	"t_institution_type_option_5": "22. Type III- IV for blind or visually impaired children",
+	"t_institution_type_option_5_value": "22",
+	"t_institution_type_option_6": "23. Type V for children with severe speech impairments",
+	"t_institution_type_option_6_value": "23",
+	"t_institution_type_option_7": "24. Type VI for children with musculoskeletal disorders",
+	"t_institution_type_option_7_value": "24",
+	"t_institution_type_option_8": "25. Type VII for children with children with slow mental development / mental disorders",
+	"t_institution_type_option_8_value": "25",
+	"t_institution_type_option_9": "26. Type VIII for children with intellectual disabilities",
+	"t_institution_type_option_9_value": "26",
+	"t_no_children": "Number of children placed in the service",
+	"t_no_staff": "Number of staff working in the service",
+	"t_no_patronat": "Number of",
+	"t_no_young_left": "Number of young people who left the care system",
+	"t_button_save": "Save",
+	"t_users": "Users",
+	"t_name": "Name",
+	"t_email": "E-mail",
+	"t_role": "Role",
+	"t_country": "Country",
+	"t_city": "City",
+	"t_add": "Add",
+	"t_first_name": "First name",
+	"t_last_name": "Last name",
+	"t_patronymics": "Patronymics",
+	"t_username": "Username",
+	"t_password": "Password",
+	"t_add_user": "Add user",
+	"t_position": "Position",
+	"t_profession": "Profession",
+	"t_phone": "Phone",
+	"t_edit_user": "Edit user",
+	"t_cpis_list": "CPIS list",
+	"t_add_child": "Add child",
+	"t_csr_list": "Staff Registry List",
+	"t_add_staff": "Add staff",
+	"t_pin": "PIN",
+	"Instrument saved.": "Instrument saved.",
+	"Completati corect toate campurile!": "All entries should be correctly filled in!",
+	"The following fields are mandatory: PIN, LK1a, LK1b, LK1c!": "The following fields are mandatory: PIN, LK1a, LK1b, LK1c!",
+	"t_choose": "--- choose ---",
+	"t_choose_value": "-9",
+	"The following fields are mandatory: E1, EUID!": "The following fields are mandatory: E1, EUID!",
+	"t_euid": "EUID",
+	"t_id": "ID",
+	"Are you sure you want to delete this item?": "Are you sure you want to delete this item?",
+	"Item deleted.": "Item deleted.",
+	"t_ftch_list": "Family-Type Children's Home List",
+	"t_add_family_home": "Add Family Home",
+	"Value_up_to_ten": "The value must be up to 10",
+	"Start_before_end": "Admission date before exit date",
+	"t_notatall": "1. Not at all",
+	"t_notatall_value": "1",
+	"t_total": "10. Total",
+	"t_total_value": "10",
+	"The following fields are mandatory: IFM1, IFM2, IFM3!": "The following fields are mandatory: IFM1, IFM2, IFM3!",
+	"At_least_one_disability": "At least one disability",
+	"At_least_one_brother_or_sister": "At least one brother or sister",
+	"t_pfq_list": "Patronat Family Questionnaire List",
+	"t_add_patronat_family": "Add Patronat Family",
+	"The following fields are mandatory: IG1, IG2, IG3!": "The following fields are mandatory: IG1, IG2, IG3!",
+	"t_eef_list": "External evaluation form of the childcare institutions and boarding schools",
+	"t_add_evaluation": "Add evaluation",
+	"t_institution": "Institution",
+	"t_add_young_people": "Add young person",
+	"t_yplcs_list": "Questionnaire about the young person leaving the child care system",
+	"The following fields are mandatory: PI1, PI1A, PI1B, PI1C!": "The following fields are mandatory: PI1, PI1A, PI1B, PI1C!",
+	"t_cibs_list": "Questionnaire about the child placed in specialized boarding schools",
+	"not_in_registry": "The institution does not appear in the Registry",
+	"t_tqyp_list": "Trace questionnaire about the young person who left the alternative care system",
+	"t_patronat_family_questionnaires": "Patronat Family Questionnaire",
+	"t_instrument8": "I8. Patronat Family Questionnaire",
+	"t_children_placed_in_the_service": "Questionnaire about the child placed into the child protection system",
+	"t_instrument1": "I1. Questionnaire about the child placed into the child protection system",
+	"t_family_type_children_s_home_questionnaire": "Family-Type Children's Home Questionnaire",
+	"t_instrument7": "I7. Family-Type Children's Home Questionnaire",
+	"t_questionnaire_on_the_material_resources": "Material resources of the institution and the living conditions of the residing children",
+	"t_instrument4": "I4. Material resources of the institution and the living conditions of the residing children",
+	"t_staff_working_in_the_service": "Staff registry of the childcare institutions and specialized boarding-schools",
+	"t_instrument3": "I3. Staff registry of the childcare institutions and specialized boarding-schools",
+	"t_data_sheet_on_entries_and_exits": "Synthetic Data Collection Sheet Regarding Entries and Exits from the Childcare Institution and Specialized Boarding Schools",
+	"t_instrument6": "I6. Synthetic Data Collection Sheet Regarding Entries and Exits from the Childcare Institution and Specialized Boarding Schools",
+	"t_young_people_who_left_care_system": "Questionnaire about the young person leaving the child care system",
+	"t_instrument5": "I5. Questionnaire about the young person leaving the child care system",
+	"t_child_placed_in_specialized_boarding_schools": "Questionnaire about the child placed in specialized boarding schools",
+	"t_instrument2": "I2. Questionnaire about the child placed in specialized boarding schools",
+	"t_trace_questionnaire_about_the_young_person_who_left_the_alternative_care_system": "Trace questionnaire about the young person who left the alternative care system",
+	"t_instrument5A": "I5A. Trace questionnaire about the young person who left the alternative care system",
+	"t_external_evaluation_forms": "External evaluation form of the childcare institutions and boarding schools",
+	"t_instrument9": "I9. External evaluation form of the childcare institutions and boarding schools",
+	"t_instruments": "Instruments list",
+	"t_button_complete": "Completed",
+	"t_number_to_be_filled": "Number to be filled",
+	"t_number_completed": "Number completed",
+	"The following fields are mandatory: PTR1, PTR2A, PTR2B, PTR2C!": "The following fields are mandatory: PTR1, PTR2A, PTR2B, PTR2C!"
 }
