username in loc de institution code

--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -1,6 +1,6 @@
 {
     "password": "Пароль",
-    "username": "Код учреждения",
+    "username": "Имя пользователя",
     "login": "Логин",
     "login_message": "Привет! Пожалуйста войдите",
     "empty_username_password": "Пожалуйста заполните все поля",
