--- a/src/locales/uz.json
+++ b/src/locales/uz.json
@@ -1,6 +1,6 @@
 {
     "password": "Parol",
-    "username": "Muassasa kodi",
+    "username": "Foydalanuvchi nomi",
     "login": "Login",
     "login_message": "Salom! Iltimos, kiring",
     "empty_username_password": "Iltimos, barcha qatorlarni to'ldiring",
