--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,6 +1,6 @@
 {
 	"password": "Password",
-	"username": "Institution code",
+	"username": "Username",
 	"login": "Login",
 	"login_message": "Hello! Please log in",
 	"empty_username_password": "Please fill in all fields",
