--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -155,9 +155,10 @@
 	"t_number_to_be_filled": "Number to be filled",
 	"t_number_completed": "Number completed",
 	"The following fields are mandatory: PTR1, PTR2A, PTR2B, PTR2C!": "The following fields are mandatory: PTR1, PTR2A, PTR2B, PTR2C!",
-	"Пожалуйста заполните все поля": "Пожалуйста заполните все поля",
 	"no_unknown": "Cannot be unknown",
 	"child_under_7": "The child was under 7 years of age",
 	"main._chooseFolder": "main._chooseFolder",
-	"_chooseFile": "_chooseFile"
+	"_chooseFile": "_chooseFile",
+	"main.success": "main.success",
+	"main._dataDownloaded": "main._dataDownloaded"
 }
