organizare traduceri tipuri institutii

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -52,24 +52,32 @@
 	"t_institution_type": "Type of institution",
 	"t_institution_type_group_1": "Childcare institutions:",
 	"t_institution_type_group_2": "Boarding schools:",
-	"t_institution_type_option_1": "11. Children's home (Baby home)",
-	"t_institution_type_option_1_value": "11",
-	"t_institution_type_option_2": "12. Mehribonlik house",
-	"t_institution_type_option_2_value": "12",
-	"t_institution_type_option_3": "13. Muruvat house for children with disabilities",
-	"t_institution_type_option_3_value": "13",
-	"t_institution_type_option_4": "21. Type I- II for deaf or with hearing impairments children",
-	"t_institution_type_option_4_value": "21",
-	"t_institution_type_option_5": "22. Type III- IV for blind or visually impaired children",
-	"t_institution_type_option_5_value": "22",
-	"t_institution_type_option_6": "23. Type V for children with severe speech impairments",
-	"t_institution_type_option_6_value": "23",
-	"t_institution_type_option_7": "24. Type VI for children with musculoskeletal disorders",
-	"t_institution_type_option_7_value": "24",
-	"t_institution_type_option_8": "25. Type VII for children with children with slow mental development / mental disorders",
-	"t_institution_type_option_8_value": "25",
-	"t_institution_type_option_9": "26. Type VIII for children with intellectual disabilities",
-	"t_institution_type_option_9_value": "26",
+	"t_institution_type_option_11": "Mehribonlik house",
+	"t_institution_type_option_12": "Muruvat house for children with disabilities",
+	"t_institution_type_option_13": "Family children's home",
+	"t_institution_type_option_14": "SOS children's villages/families",
+	"t_institution_type_option_15": "Children's home (Baby home)",
+	"t_institution_type_option_16": "Patronat family",
+	"t_institution_type_option_17": "Trusteeship/Guardianship care",
+	"t_institution_type_option_21": "Type I- II for deaf or with hearing impairments children",
+	"t_institution_type_option_22": "Type III- IV for blind or visually impaired children",
+	"t_institution_type_option_23": "Type V for children with severe speech impairments",
+	"t_institution_type_option_24": "Type VI for children with musculoskeletal disorders",
+	"t_institution_type_option_25": "Type VII for children with children with slow mental development / mental disorders",
+	"t_institution_type_option_26": "Type VIII for children with intellectual disabilities",
+	"t_institution_type_option_11_value": "11",
+	"t_institution_type_option_12_value": "12",
+	"t_institution_type_option_13_value": "13",
+	"t_institution_type_option_14_value": "14",
+	"t_institution_type_option_15_value": "15",
+	"t_institution_type_option_16_value": "16",
+	"t_institution_type_option_17_value": "17",
+	"t_institution_type_option_21_value": "21",
+	"t_institution_type_option_22_value": "22",
+	"t_institution_type_option_23_value": "23",
+	"t_institution_type_option_24_value": "24",
+	"t_institution_type_option_25_value": "25",
+	"t_institution_type_option_26_value": "26",
 	"t_no_children": "Number of children placed in the service",
 	"t_no_staff": "Number of staff working in the service",
 	"t_no_patronat": "Number of",
