--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -52,24 +52,32 @@
     "t_institution_type": "Тип учреждения",
     "t_institution_type_group_1": "Детские учреждения:",
     "t_institution_type_group_2": "Школы-интернаты",
-    "t_institution_type_option_1": "Детский дом ( Дом ребенка)",
-    "t_institution_type_option_1_value": "11",
-    "t_institution_type_option_2": "Дом Мехрибонлик",
-    "t_institution_type_option_2_value": "12",
-    "t_institution_type_option_3": "Дом-интерант Мурувват для детей с инвалидностью",
-    "t_institution_type_option_3_value": "13",
-    "t_institution_type_option_4": "Тип I-II для глухих и слабослышащих детей",
-    "t_institution_type_option_4_value": "21",
-    "t_institution_type_option_5": "Тип III-IV для слепых и слабовидящих детей",
-    "t_institution_type_option_5_value": "22",
-    "t_institution_type_option_6": "Тип V для детей с тяжелыми нарушениями речи",
-    "t_institution_type_option_6_value": "23",
-    "t_institution_type_option_7": "Тип VI для детей с нарушением опорно-двигательного аппарата",
-    "t_institution_type_option_7_value": "24",
-    "t_institution_type_option_8": "Тип VII для детей с задержкой психического развития",
-    "t_institution_type_option_8_value": "25",
-    "t_institution_type_option_9": "Тип VIII для детей с задержкой интеллектуального развития",
-    "t_institution_type_option_9_value": "26",
+    "t_institution_type_option_11": "Дом «Мехрибонлик»",
+    "t_institution_type_option_12": "Дом-интернат «Мурувват» для детей с инвалидностью",
+    "t_institution_type_option_13": "Детский дом семейного типа",
+    "t_institution_type_option_14": "SOS Детские деревни/семьи",
+    "t_institution_type_option_15": "Детский дом (Дом ребенка)",
+    "t_institution_type_option_16": "Патронатная семья",
+    "t_institution_type_option_17": " Опека/попечительство",
+    "t_institution_type_option_21": "Тип I-II для глухих и слабослышащих детей",
+    "t_institution_type_option_22": "Тип III-IV для слепых и слабовидящих детей",
+    "t_institution_type_option_23": "Тип V для детей с тяжелыми нарушениями речи",
+    "t_institution_type_option_24": "Тип VI для детей с нарушением опорно-двигательного аппарата",
+    "t_institution_type_option_25": "Тип VII для детей с задержкой психического развития",
+    "t_institution_type_option_26": "Тип VIII для детей с задержкой интеллектуального развития",
+    "t_institution_type_option_11_value": "11",
+    "t_institution_type_option_12_value": "12",
+    "t_institution_type_option_13_value": "13",
+    "t_institution_type_option_14_value": "14",
+    "t_institution_type_option_15_value": "15",
+    "t_institution_type_option_16_value": "16",
+    "t_institution_type_option_17_value": "17",
+    "t_institution_type_option_21_value": "21",
+    "t_institution_type_option_22_value": "22",
+    "t_institution_type_option_23_value": "23",
+    "t_institution_type_option_24_value": "24",
+    "t_institution_type_option_25_value": "25",
+    "t_institution_type_option_26_value": "26",
     "t_no_children": "Количество детей, получающих услуги",
     "t_no_staff": "Количество персонала, работающих в учреждении",
     "t_no_patronat": "Количество",
