--- a/src/locales/uz.json
+++ b/src/locales/uz.json
@@ -52,24 +52,32 @@
     "t_institution_type": "Muassasa turi",
     "t_institution_type_group_1": "Bolalar muassasalari:",
     "t_institution_type_group_2": "Maktrab-internatlar",
-    "t_institution_type_option_1": "Bolalar uyi (bola uyi)",
-    "t_institution_type_option_1_value": "11",
-    "t_institution_type_option_2": "Mexribonlik uyi",
-    "t_institution_type_option_2_value": "12",
-    "t_institution_type_option_3": "Nogironligi mavjud bolalar uchun Muruvvat internat-uyi",
-    "t_institution_type_option_3_value": "13",
-    "t_institution_type_option_4": "I-II tur. Kar va eshitish qobiliyati past bolalar uchun",
-    "t_institution_type_option_4_value": "21",
-    "t_institution_type_option_5": "III-IV tur. Ko'r va ko'zi ojiz bolalar uchun",
-    "t_institution_type_option_5_value": "22",
-    "t_institution_type_option_6": "V tur. Og'ir nutq buzilishi bo'lgan bolalar uchun",
-    "t_institution_type_option_6_value": "23",
-    "t_institution_type_option_7": "VI tur. Mushak-skelet tizimining buzilishi bo'lgan bolalar uchun",
-    "t_institution_type_option_7_value": "24",
-    "t_institution_type_option_8": "VII tur. Aqliy rivojlanishida nuqsoni bo'lgan bolalar uchun",
-    "t_institution_type_option_8_value": "25",
-    "t_institution_type_option_9": "VIII tur. Intellektual rivojlanishida nuqsoni bo'lgan bolalar uchun",
-    "t_institution_type_option_9_value": "26",
+    "t_institution_type_option_11": "Mehribonlik uyi",
+    "t_institution_type_option_12": "\"Muruvvat\" nogironligi bo'lgan bolalar uchun  internat uyi",
+    "t_institution_type_option_13": "Oilaviy bolalar uyi",
+    "t_institution_type_option_14": "SOS Bolalar makhallalari/oilalari",
+    "t_institution_type_option_15": "Bolalar uyi ",
+    "t_institution_type_option_16": "Patronat oila",
+    "t_institution_type_option_17": "Vasiylik/homiylik",
+    "t_institution_type_option_21": "I-II tur. Kar va eshitish qobiliyati past bolalar uchun",
+    "t_institution_type_option_22": "III-IV tur. Ko'r va ko'zi ojiz bolalar uchun",
+    "t_institution_type_option_23": "V tur. Og'ir nutq buzilishi bo'lgan bolalar uchun",
+    "t_institution_type_option_24": "VI tur. Mushak-skelet tizimining buzilishi bo'lgan bolalar uchun",
+    "t_institution_type_option_25": "VII tur. Aqliy rivojlanishida nuqsoni bo'lgan bolalar uchun",
+    "t_institution_type_option_26": "VIII tur. Intellektual rivojlanishida nuqsoni bo'lgan bolalar uchun",
+    "t_institution_type_option_11_value": "11",
+	"t_institution_type_option_12_value": "12",
+	"t_institution_type_option_13_value": "13",
+	"t_institution_type_option_14_value": "14",
+	"t_institution_type_option_15_value": "15",
+	"t_institution_type_option_16_value": "16",
+	"t_institution_type_option_17_value": "17",
+	"t_institution_type_option_21_value": "21",
+	"t_institution_type_option_22_value": "22",
+	"t_institution_type_option_23_value": "23",
+	"t_institution_type_option_24_value": "24",
+	"t_institution_type_option_25_value": "25",
+	"t_institution_type_option_26_value": "26",
     "t_no_children": "Xizmatga ega bo'layotgan bolalar soni",
     "t_no_staff": "Muassasada ishlayotgan xodimlar soni",
     "t_no_patronat": "Soni",
