regiuni, districte etc.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -162,9 +162,23 @@
 	"t_button_complete": "Completed",
 	"t_number_to_be_filled": "Number to be filled",
 	"t_number_completed": "Number completed",
+	"child_under_7": "The child was under 7 years of age",
+	"t_settlement_type_10": "Region",
+	"t_settlement_type_20": "District",
+	"t_settlement_type_21": "District-level city",
+	"t_settlement_type_22": "City District",
+	"t_settlement_type_23": "Town",
+	"t_settlement_type_24": "Urban-type settlement",
+	"t_settlement_type_31": "Rural community",
+	"t_settlement_type_region_10": "10",
+	"t_settlement_type_district_20": "20",
+	"t_settlement_type_dlc_21": "21",
+	"t_settlement_type_city_22": "22",
+	"t_settlement_type_town_23": "23",
+	"t_settlement_type_uts_24": "24",
+	"t_settlement_type_rural_31": "31",
 	"The following fields are mandatory: PTR1, PTR2A, PTR2B, PTR2C!": "The following fields are mandatory: PTR1, PTR2A, PTR2B, PTR2C!",
 	"no_unknown": "Cannot be unknown",
-	"child_under_7": "The child was under 7 years of age",
 	"main._chooseFolder": "main._chooseFolder",
 	"_chooseFile": "_chooseFile",
 	"main.success": "main.success",
