--- a/src/locales/uz.json
+++ b/src/locales/uz.json
@@ -163,5 +163,19 @@
     "t_number_to_be_filled": "Number to be filled",
     "t_number_completed": "Number completed",
 	"no_unknown": "Noma'lum bo'lishi mumkin emas",
-    "child_under_7": "Bola 7 yoshdan kichik edi"
+    "child_under_7": "Bola 7 yoshdan kichik edi",
+	"t_settlement_type_10": "Viloyati",
+	"t_settlement_type_20": "Tumani",
+	"t_settlement_type_21": "Viloyat ahamiyatiga ega shaharlar",
+	"t_settlement_type_22": "Shaxarning tumanlari",
+	"t_settlement_type_23": "Tuman ahamiyatiga ega shaharlar",
+	"t_settlement_type_24": "Tuman ichidagi shaharchalar",
+	"t_settlement_type_31": "Qishloq fuqarolar yig'ini",
+	"t_settlement_type_region_10": "10",
+	"t_settlement_type_district_20": "20",
+	"t_settlement_type_dlc_21": "21",
+	"t_settlement_type_city_22": "22",
+	"t_settlement_type_town_23": "23",
+	"t_settlement_type_uts_24": "24",
+	"t_settlement_type_rural_31": "31"
 }
