--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -169,14 +169,14 @@
 	"t_settlement_type_22": "City District",
 	"t_settlement_type_23": "Town",
 	"t_settlement_type_24": "Urban-type settlement",
-	"t_settlement_type_31": "Rural community",
-	"t_settlement_type_region_10": "10",
-	"t_settlement_type_district_20": "20",
-	"t_settlement_type_dlc_21": "21",
-	"t_settlement_type_city_22": "22",
-	"t_settlement_type_town_23": "23",
-	"t_settlement_type_uts_24": "24",
-	"t_settlement_type_rural_31": "31",
+	"t_settlement_type_31": "31",
+	"t_settlement_type_10_value": "10",
+	"t_settlement_type_20_value": "20",
+	"t_settlement_type_21_value": "21",
+	"t_settlement_type_22_value": "22",
+	"t_settlement_type_23_value": "23",
+	"t_settlement_type_24_value": "24",
+	"t_settlement_type_31_value": "31",
 	"The following fields are mandatory: PTR1, PTR2A, PTR2B, PTR2C!": "The following fields are mandatory: PTR1, PTR2A, PTR2B, PTR2C!",
 	"no_unknown": "Cannot be unknown",
 	"main._chooseFolder": "main._chooseFolder",
