--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -169,7 +169,7 @@
 	"t_settlement_type_22": "City District",
 	"t_settlement_type_23": "Town",
 	"t_settlement_type_24": "Urban-type settlement",
-	"t_settlement_type_31": "31",
+	"t_settlement_type_31": "Rural community",
 	"t_settlement_type_10_value": "10",
 	"t_settlement_type_20_value": "20",
 	"t_settlement_type_21_value": "21",
