--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -162,6 +162,7 @@
 	"t_button_complete": "Completed",
 	"t_number_to_be_filled": "Number to be filled",
 	"t_number_completed": "Number completed",
+	"no_unknown": "Cannot be unknown",
 	"child_under_7": "The child was under 7 years of age",
 	"t_settlement_type_10": "Region",
 	"t_settlement_type_20": "District",
@@ -177,8 +178,8 @@
 	"t_settlement_type_23_value": "23",
 	"t_settlement_type_24_value": "24",
 	"t_settlement_type_31_value": "31",
+	"af1_instrument_04": "The sum of the areas of the buildings where children are accommodated (AF5a) must be less than or equal to the total area of the institution (AF1).",
 	"The following fields are mandatory: PTR1, PTR2A, PTR2B, PTR2C!": "The following fields are mandatory: PTR1, PTR2A, PTR2B, PTR2C!",
-	"no_unknown": "Cannot be unknown",
 	"main._chooseFolder": "main._chooseFolder",
 	"_chooseFile": "_chooseFile",
 	"main.success": "main.success",
