--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -178,5 +178,6 @@
 	"t_settlement_type_23_value": "23",
 	"t_settlement_type_24_value": "24",
 	"t_settlement_type_31_value": "31",
-	"af1_instrument_04": "The sum of the areas of the buildings where children are accommodated (AF5a) must be less than or equal to the total area of the institution (AF1)."
+	"af1_instrument_04": "The sum of the areas of the buildings where children are accommodated (AF5a) must be less than or equal to the total area of the institution (AF1).",
+    "impossible": "Hевозможное"
 }
