--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -158,10 +158,10 @@
     "t_instrument5A": "I5A. Опросник по отслеживанию молодых людей покинувших систему альтернативной опеки",
     "t_external_evaluation_forms": "Форма внешней оценки детских учреждений и школ-интернатов",
     "t_instrument9": "I9. Форма внешней оценки детских учреждений и школ-интернатов",
-    "t_instruments": "Instruments list",
-    "t_button_complete": "Completed",
-    "t_number_to_be_filled": "Number to be filled",
-    "t_number_completed": "Number completed",
+    "t_instruments": "Список инструментов",
+    "t_button_complete": "Завершено",
+    "t_number_to_be_filled": "Всего заполнить",
+    "t_number_completed": "Завершено",
     "no_unknown": "Не может быть неизвестным",
     "child_under_7": "Ребенок был младше 7 лет",
 	"t_settlement_type_10": "Oбласть",
@@ -179,5 +179,13 @@
 	"t_settlement_type_24_value": "24",
 	"t_settlement_type_31_value": "31",
 	"af1_instrument_04": "The sum of the areas of the buildings where children are accommodated (AF5a) must be less than or equal to the total area of the institution (AF1).",
-    "impossible": "Hевозможное"
+    "impossible": "Hевозможное",
+    "The following fields are mandatory: PTR1, PTR2A, PTR2B, PTR2C!": "The following fields are mandatory: PTR1, PTR2A, PTR2B, PTR2C!",
+	"main._chooseFolder": "Choose folder",
+	"_chooseFile": "Choose file",
+	"main.success": "Success",
+	"main._dataDownloaded": "Export successful!",
+	"Please fill in all fields": "Please fill in all fields",
+	"Error": "Error",
+	"main._dataDownloadedError": "Error. No folder selected!"
 }
