--- a/src/locales/uz.json
+++ b/src/locales/uz.json
@@ -158,10 +158,10 @@
     "t_instrument5A": "I5A. Muqobil vasiylik tizimini tark etgan yosh shaxsning kuzatuv so'rovnomasi",
     "t_external_evaluation_forms": "Bolalar muassasalari va maktab-internatlarning tashqi baholash shakli",
     "t_instrument9": "I9. Bolalar muassasalari va maktab-internatlarning tashqi baholash shakli",
-    "t_instruments": "Instruments list",
-    "t_button_complete": "Completed",
-    "t_number_to_be_filled": "Number to be filled",
-    "t_number_completed": "Number completed",
+    "t_instruments": "Shakllar ro'yxati",
+    "t_button_complete": "Tugatildi",
+    "t_number_to_be_filled": "Barchasi to'ldiriladi",
+    "t_number_completed": "Tugatildi",
 	"no_unknown": "Noma'lum bo'lishi mumkin emas",
     "child_under_7": "Bola 7 yoshdan kichik edi",
 	"t_settlement_type_10": "Viloyati",
@@ -179,5 +179,13 @@
 	"t_settlement_type_24_value": "24",
 	"t_settlement_type_31_value": "31",
 	"af1_instrument_04": "The sum of the areas of the buildings where children are accommodated (AF5a) must be less than or equal to the total area of the institution (AF1).",
-    "impossible": "Imkonsiz"
+    "impossible": "Imkonsiz",
+    "The following fields are mandatory: PTR1, PTR2A, PTR2B, PTR2C!": "The following fields are mandatory: PTR1, PTR2A, PTR2B, PTR2C!",
+	"main._chooseFolder": "Choose folder",
+	"_chooseFile": "Choose file",
+	"main.success": "Success",
+	"main._dataDownloaded": "Export successful!",
+	"Please fill in all fields": "Please fill in all fields",
+	"Error": "Error",
+	"main._dataDownloadedError": "Error. No folder selected!"
 }
