--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -181,9 +181,11 @@
 	"af1_instrument_04": "The sum of the areas of the buildings where children are accommodated (AF5a) must be less than or equal to the total area of the institution (AF1).",
 	"impossible": "Impossible",
 	"The following fields are mandatory: PTR1, PTR2A, PTR2B, PTR2C!": "The following fields are mandatory: PTR1, PTR2A, PTR2B, PTR2C!",
-	"main._chooseFolder": "main._chooseFolder",
-	"_chooseFile": "_chooseFile",
-	"main.success": "main.success",
-	"main._dataDownloaded": "main._dataDownloaded",
-	"Please fill in all fields": "Please fill in all fields"
+	"main._chooseFolder": "Choose folder",
+	"_chooseFile": "Choose file",
+	"main.success": "Success",
+	"main._dataDownloaded": "Export successful!",
+	"Please fill in all fields": "Please fill in all fields",
+	"Error": "Error",
+	"main._dataDownloadedError": "Error. No folder selected!"
 }
